--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -23,6 +23,7 @@ jobs:
         days-before-issue-stale: 180
         days-before-issue-close: 5
         close-issue-message: 'closed for inactivity'
+        start-date: '2020-12-10'
         repo-token: ${{ secrets.GITHUB_TOKEN }}
         stale-issue-message: 'This is a very old issue that is probably not getting as much attention as it deserves. We encourage you to check if this is still an issue after the latest release and if you find that this is still a problem, please feel free to open a new issue and make a reference to this one.'
         stale-issue-label: 'closing soon'
